removed created/updated at + redundant country_id
